<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="490dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f7c3c3"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/team_a"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/teamA_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:text="@string/_0"
                android:textSize="56sp" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/team_a"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/b1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="apoint_3"
                android:text="@string/_3_points"/>

            <Button
                android:id="@+id/b2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="apoint_2"
                android:text="@string/_2_points"/>

            <Button
                android:id="@+id/b3"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:onClick="throw_scoreA"
                android:text="@string/free_throw"/>
            <Button
                android:id="@+id/foul1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="foulA"
                android:text="@string/_1_foul"/>
        </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/material_cyan_200" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#8cf768"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/team_b"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/teamB_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:text="@string/_0"
                android:textSize="56sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/team_b"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/b4"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="bpoint_3"
                android:text="@string/_3_points"/>

            <Button
                android:id="@+id/b5"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="bpoint_2"
                android:text="@string/_2_points"/>

            <Button
                android:id="@+id/b6"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:onClick="throw_scoreB"
                android:text="@string/free_throw"/>
            <Button
                android:id="@+id/foul2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="foulB"
                android:text="@string/_1_foul"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/b_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:onClick="reset"
        android:text="@string/reset"
        />


</RelativeLayout>